--- a/Test_Matrix.ipynb
+++ b/Test_Matrix.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -193,6 +193,7 @@
     "hs = np.logspace(-2, 2, 10)\n",
     "Ns = range(2, 10, 1)\n",
     "plt.figure(figsize=(7,5))\n",
+    "M_h1 = []\n",
     "for N in Ns:\n",
     "    M = []\n",
     "    for h in hs:\n",
@@ -201,13 +202,21 @@
     "        ground_state = eigvecs[:, 0]\n",
     "        M.append(magnetization_x(ground_state, N, X, kron_N, I))\n",
     "    plt.plot(hs, M, marker='o', label=f\"N = {N}\")\n",
+    "    # 记录h=1时的M\n",
+    "    idx_h1 = np.argmin(np.abs(hs - 1.0))\n",
+    "    M_h1.append(M[idx_h1])\n",
     "    print(f\"N={N}, M={M}\")\n",
     "plt.xscale('log')\n",
     "plt.xlabel(\"h\")\n",
     "plt.ylabel(\"M(h)\")\n",
     "plt.legend()\n",
     "plt.title(\"Transverse Field Ising Chain: Magnetization vs h\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# 单独展示 h=1 时不同 N 下的 M\n",
+    "print(\"h=1 时，不同 N 下的 M 值：\")\n",
+    "for n, m in zip(Ns, M_h1):\n",
+    "    print(f\"N={n}, M(h=1)={m}\")"
    ]
   }
  ],
