back to ordinary

--- a/Ising_QNN_2.ipynb
+++ b/Ising_QNN_2.ipynb
@@ -12,24 +12,14 @@
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import clear_output\n",
     "\n",
+    "import multiprocessing  \n",
+    "\n",
     "from qiskit import QuantumCircuit\n",
     "from qiskit.circuit import ParameterVector\n",
     "from qiskit.quantum_info import SparsePauliOp\n",
     "from qiskit.primitives import Estimator\n",
     "from qiskit_machine_learning.neural_networks import EstimatorQNN\n",
     "from qiskit_machine_learning.connectors import TorchConnector\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ----- 参数设置 -----\n",
-    "n_qubits = 4\n",
-    "J = 1.0\n",
-    "h = 1.0"
    ]
   },
   {
@@ -102,7 +92,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/d9/_3jh3gcd7m5gl50nsj1mgls80000gn/T/ipykernel_9369/1738038090.py:3: DeprecationWarning: V1 Primitives are deprecated as of qiskit-machine-learning 0.8.0 and will be removed no sooner than 4 months after the release date. Use V2 primitives for continued compatibility and support.\n",
+      "/var/folders/d9/_3jh3gcd7m5gl50nsj1mgls80000gn/T/ipykernel_11582/1738038090.py:3: DeprecationWarning: V1 Primitives are deprecated as of qiskit-machine-learning 0.8.0 and will be removed no sooner than 4 months after the release date. Use V2 primitives for continued compatibility and support.\n",
       "  qnn = EstimatorQNN(\n"
      ]
     }
@@ -202,14 +192,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/d9/_3jh3gcd7m5gl50nsj1mgls80000gn/T/ipykernel_9369/4108467191.py:9: DeprecationWarning: V1 Primitives are deprecated as of qiskit-machine-learning 0.8.0 and will be removed no sooner than 4 months after the release date. Use V2 primitives for continued compatibility and support.\n",
+      "/var/folders/d9/_3jh3gcd7m5gl50nsj1mgls80000gn/T/ipykernel_11582/3135510036.py:9: DeprecationWarning: V1 Primitives are deprecated as of qiskit-machine-learning 0.8.0 and will be removed no sooner than 4 months after the release date. Use V2 primitives for continued compatibility and support.\n",
       "  qnn = EstimatorQNN(\n"
      ]
     },
@@ -217,7 +207,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N=6, E0=-6.666801, <Z>=0.321278, <X>=0.808845\n"
+      "N=6, E0=-6.499263, <Z>=0.375692, <X>=0.700050\n"
      ]
     }
    ],
@@ -238,34 +228,59 @@
     "        estimator=estimator\n",
     "    )\n",
     "    qnn_model = TorchConnector(qnn)\n",
+    "    num_trials = 1  # 尝试次数，可根据需要调整\n",
+    "    best_energy = None\n",
+    "    best_weights = None\n",
+    "\n",
     "    optimizer = torch.optim.AdamW(qnn_model.parameters(), lr=0.01)\n",
-    "    # 只优化能量，不再联合优化磁化率\n",
-    "    for param in qnn_model.parameters():\n",
-    "        nn.init.uniform_(param, a=-np.pi, b=np.pi)\n",
-    "    for epoch in range(100):  # 迭代步数可调\n",
-    "        optimizer.zero_grad()\n",
-    "        output = qnn_model()\n",
-    "        loss = output.mean()  # 只优化能量\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "    # 记录最优参数下的物理量\n",
-    "    final_weights = qnn_model.weight.detach().numpy()\n",
+    "    alpha = 0.02  # X方向磁化率权重\n",
+    "    beta = 0.02   # Z方向磁化率权重\n",
+    "\n",
+    "    for trial in range(num_trials):\n",
+    "        for param in qnn_model.parameters():\n",
+    "            nn.init.uniform_(param, a=-np.pi, b=np.pi)\n",
+    "        # objective_func_vals = # 可选：如需可视化\n",
+    "\n",
+    "        for epoch in range(100): # 迭代次数\n",
+    "            optimizer.zero_grad()\n",
+    "            output = qnn_model()\n",
+    "            # X方向总磁化\n",
+    "            x_obs = SparsePauliOp.from_list([(f\"{'X'*n_qubits}\", 1.0)])\n",
+    "            mx = estimator.run(circuits=ansatz_circuit, observables=x_obs, parameter_values=[qnn_model.weight.detach().numpy()]).result().values[0]\n",
+    "            # Z方向总磁化\n",
+    "            z_obs = SparsePauliOp.from_list([(f\"{'Z'*n_qubits}\", 1.0)])\n",
+    "            mz = estimator.run(circuits=ansatz_circuit, observables=z_obs, parameter_values=[qnn_model.weight.detach().numpy()]).result().values[0]\n",
+    "            # 联合优化能量、X磁化率、Z磁化率\n",
+    "            loss = output.mean() + alpha * (1 - abs(mx)) + beta * (1 - abs(mz))\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            # callback_graph(qnn_model.weight, loss.item())  # 可选：如需可视化\n",
+    "\n",
+    "        final_weights = qnn_model.weight.detach().numpy()\n",
+    "        estimator = Estimator()\n",
+    "        E0 = estimator.run(\n",
+    "            circuits=ansatz_circuit,\n",
+    "            observables=hamiltonian,\n",
+    "            parameter_values=[final_weights]\n",
+    "        ).result().values[0]\n",
+    "        if (best_energy is None) or (E0 < best_energy):\n",
+    "            best_energy = E0\n",
+    "            best_weights = final_weights\n",
+    "\n",
+    "    # 用最优参数输出物理量\n",
     "    estimator = Estimator()\n",
-    "    E0 = estimator.run(circuits=ansatz_circuit, observables=hamiltonian, parameter_values=[final_weights]).result().values[0]\n",
-    "    # <Z> 总磁化\n",
+    "    E0 = estimator.run(circuits=ansatz_circuit, observables=hamiltonian, parameter_values=[best_weights]).result().values[0]\n",
     "    z_obs = SparsePauliOp.from_list([(f\"{'I'*i + 'Z' + 'I'*(n_qubits - i - 1)}\", 1.0) for i in range(n_qubits)])\n",
-    "    mz = estimator.run(circuits=ansatz_circuit, observables=z_obs, parameter_values=[final_weights]).result().values[0] / n_qubits\n",
-    "    # <X> 总磁化\n",
+    "    mz = estimator.run(circuits=ansatz_circuit, observables=z_obs, parameter_values=[best_weights]).result().values[0] / n_qubits\n",
     "    x_obs = SparsePauliOp.from_list([(f\"{'I'*i + 'X' + 'I'*(n_qubits - i - 1)}\", 1.0) for i in range(n_qubits)])\n",
-    "    mx = estimator.run(circuits=ansatz_circuit, observables=x_obs, parameter_values=[final_weights]).result().values[0] / n_qubits\n",
+    "    mx = estimator.run(circuits=ansatz_circuit, observables=x_obs, parameter_values=[best_weights]).result().values[0] / n_qubits\n",
     "    results.append((n_qubits, E0, mz, mx))\n",
-    "    print(f\"N={n_qubits}, E0={E0:.6f}, <Z>={mz:.6f}, <X>={mx:.6f}\")\n",
-    "\n"
+    "    print(f\"N={n_qubits}, E0={E0:.6f}, <Z>={mz:.6f}, <X>={mx:.6f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -274,15 +289,7 @@
      "text": [
       "\n",
       "Summary for N=2 to 10:\n",
-      "N=2: E0=-2.236065, <Z>=0.002386, <X>=0.894435\n",
-      "N=3: E0=-3.492862, <Z>=0.044062, <X>=0.839051\n",
-      "N=4: E0=-4.706043, <Z>=0.190158, <X>=0.814430\n",
-      "N=5: E0=-5.607456, <Z>=0.652215, <X>=0.665282\n",
-      "N=6: E0=-6.847428, <Z>=0.535685, <X>=0.736193\n",
-      "N=7: E0=-7.541630, <Z>=0.409194, <X>=0.703174\n",
-      "N=8: E0=-8.843509, <Z>=-0.531355, <X>=0.679143\n",
-      "N=9: E0=-8.607341, <Z>=-0.213022, <X>=0.492764\n",
-      "N=10: E0=-9.188352, <Z>=-0.494774, <X>=0.392903\n"
+      "N=10: E0=-12.131174, <Z>=0.484979, <X>=0.744281\n"
      ]
     }
    ],
