--- a/Ising_QNN.ipynb
+++ b/Ising_QNN.ipynb
@@ -22,19 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ----- 参数设置 -----\n",
-    "n_qubits = 4\n",
-    "J = 1.0\n",
-    "h = 1.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,75 +46,7 @@
     "        paulis.append(''.join(reversed(label)))\n",
     "        coeffs.append(-h)\n",
     "\n",
-    "    return SparsePauliOp.from_list(list(zip(paulis, coeffs)))\n",
-    "\n",
-    "hamiltonian = build_ising_hamiltonian(n_qubits, J, h)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_hadamard_ansatz(n_qubits, reps=6):\n",
-    "    params = ParameterVector('θ', length=3 * n_qubits * reps)\n",
-    "    qc = QuantumCircuit(n_qubits)\n",
-    "    # Hadamard初态\n",
-    "    for i in range(n_qubits):\n",
-    "        qc.h(i)\n",
-    "    # 多层参数化\n",
-    "    for rep in range(reps):\n",
-    "        for i in range(n_qubits):\n",
-    "            qc.ry(params[3 * n_qubits * rep + i], i)\n",
-    "            qc.rx(params[3 * n_qubits * rep + n_qubits + i], i)\n",
-    "            qc.rz(params[3 * n_qubits * rep + 2 * n_qubits + i], i)\n",
-    "        # 全连接纠缠\n",
-    "        for i in range(n_qubits):\n",
-    "            for j in range(i+1, n_qubits):\n",
-    "                qc.cx(i, j)\n",
-    "    return qc, list(params)\n",
-    "\n",
-    "\n",
-    "\n",
-    "# 使用Hadamard+全连接纠缠ansatz\n",
-    "ansatz_circuit, ansatz_params = create_hadamard_ansatz(n_qubits, reps=6)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/d9/_3jh3gcd7m5gl50nsj1mgls80000gn/T/ipykernel_9369/1738038090.py:3: DeprecationWarning: V1 Primitives are deprecated as of qiskit-machine-learning 0.8.0 and will be removed no sooner than 4 months after the release date. Use V2 primitives for continued compatibility and support.\n",
-      "  qnn = EstimatorQNN(\n"
-     ]
-    }
-   ],
-   "source": [
-    "# ----- 构建 EstimatorQNN -----\n",
-    "estimator = Estimator()\n",
-    "qnn = EstimatorQNN(\n",
-    "    circuit=ansatz_circuit,\n",
-    "    observables=hamiltonian,\n",
-    "    input_params=[],\n",
-    "    weight_params=ansatz_params,\n",
-    "    estimator=estimator\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ----- 用 TorchConnector 包装 QNN -----\n",
-    "qnn_model = TorchConnector(qnn)"
+    "    return SparsePauliOp.from_list(list(zip(paulis, coeffs)))"
    ]
   },
   {
@@ -135,22 +55,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ----- 动态可视化回调函数 -----\n",
-    "objective_func_vals = []\n",
-    "def callback_graph(weights, obj_func_eval):\n",
-    "    clear_output(wait=True)\n",
-    "    objective_func_vals.append(obj_func_eval)\n",
-    "    plt.title(\"Objective function value against iteration\")\n",
-    "    plt.xlabel(\"Iteration\")\n",
-    "    plt.ylabel(\"Objective function value\")\n",
-    "    plt.plot(range(len(objective_func_vals)), objective_func_vals)\n",
-    "    plt.grid(True)\n",
-    "    plt.show()"
+    "def create_physically_inspired_ansatz(n_qubits, h, J, reps=3):\n",
+    "    params = ParameterVector('θ', length=2 * n_qubits * reps)\n",
+    "    qc = QuantumCircuit(n_qubits)\n",
+    "\n",
+    "    # 初态准备：根据 h/J 设置 RY 角度，模拟磁化方向\n",
+    "    init_angle = 2 * np.arctan(h / J)  # 乘 2 是因为 RY(θ)|0> = cos(θ/2)|0> + sin(θ/2)|1>\n",
+    "    for i in range(n_qubits):\n",
+    "        qc.ry(init_angle, i)\n",
+    "\n",
+    "    # Ansatz 部分：多层旋转+纠缠结构\n",
+    "    for rep in range(reps):\n",
+    "        for i in range(n_qubits):\n",
+    "            qc.ry(params[2 * n_qubits * rep + i], i)\n",
+    "            qc.rx(params[2 * n_qubits * rep + n_qubits + i], i)\n",
+    "        for i in range(n_qubits - 1):\n",
+    "            qc.cx(i, i + 1)\n",
+    "\n",
+    "    return qc, list(params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +86,7 @@
        "'optimizer = torch.optim.Adagrad(qnn_model.parameters(), lr=0.1)  # 可调整学习率'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +107,7 @@
        "'optimizer = torch.optim.SGD(qnn_model.parameters(), lr=0.01)  # 可根据需要调整学习率'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,24 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 调整 Adam 优化器的学习率\n",
-    "optimizer = torch.optim.Adam(qnn_model.parameters(), lr=0.01)  # 调整学习率\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/d9/_3jh3gcd7m5gl50nsj1mgls80000gn/T/ipykernel_9369/4108467191.py:9: DeprecationWarning: V1 Primitives are deprecated as of qiskit-machine-learning 0.8.0 and will be removed no sooner than 4 months after the release date. Use V2 primitives for continued compatibility and support.\n",
+      "/var/folders/d9/_3jh3gcd7m5gl50nsj1mgls80000gn/T/ipykernel_5982/267513214.py:9: DeprecationWarning: V1 Primitives are deprecated as of qiskit-machine-learning 0.8.0 and will be removed no sooner than 4 months after the release date. Use V2 primitives for continued compatibility and support.\n",
       "  qnn = EstimatorQNN(\n"
      ]
     },
@@ -217,18 +134,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N=6, E0=-6.666801, <Z>=0.321278, <X>=0.808845\n"
+      "N=2, E0=-2.236068, <Z>=0.000281, <X>=0.894537\n",
+      "N=3, E0=-3.493832, <Z>=0.005369, <X>=0.842585\n",
+      "N=3, E0=-3.493832, <Z>=0.005369, <X>=0.842585\n",
+      "N=4, E0=-4.756895, <Z>=0.035552, <X>=0.811119\n",
+      "N=4, E0=-4.756895, <Z>=0.035552, <X>=0.811119\n",
+      "N=5, E0=-6.025982, <Z>=-0.000959, <X>=0.788909\n",
+      "N=5, E0=-6.025982, <Z>=-0.000959, <X>=0.788909\n",
+      "N=6, E0=-7.292277, <Z>=0.000726, <X>=0.773863\n",
+      "N=6, E0=-7.292277, <Z>=0.000726, <X>=0.773863\n",
+      "N=7, E0=-8.560426, <Z>=-0.000095, <X>=0.761768\n",
+      "N=7, E0=-8.560426, <Z>=-0.000095, <X>=0.761768\n",
+      "N=8, E0=-9.825080, <Z>=-0.000248, <X>=0.754983\n",
+      "N=8, E0=-9.825080, <Z>=-0.000248, <X>=0.754983\n",
+      "N=9, E0=-11.088728, <Z>=-0.000720, <X>=0.749347\n",
+      "N=9, E0=-11.088728, <Z>=-0.000720, <X>=0.749347\n",
+      "N=10, E0=-12.355604, <Z>=0.004181, <X>=0.744313\n",
+      "N=10, E0=-12.355604, <Z>=0.004181, <X>=0.744313\n"
      ]
     }
    ],
    "source": [
     "# 对N=2到10分别计算基态能量和磁化率\n",
     "results = []\n",
-    "for n_qubits in range(6, 7):\n",
+    "for n_qubits in range(2, 11):\n",
     "    J = 1.0\n",
     "    h = 1.0\n",
     "    hamiltonian = build_ising_hamiltonian(n_qubits, J, h)\n",
-    "    ansatz_circuit, ansatz_params = create_hadamard_ansatz(n_qubits, reps=6)\n",
+    "    ansatz_circuit, ansatz_params = create_physically_inspired_ansatz(n_qubits, h, J, reps=4)\n",
     "    estimator = Estimator()\n",
     "    qnn = EstimatorQNN(\n",
     "        circuit=ansatz_circuit,\n",
@@ -239,33 +172,37 @@
     "    )\n",
     "    qnn_model = TorchConnector(qnn)\n",
     "    optimizer = torch.optim.AdamW(qnn_model.parameters(), lr=0.01)\n",
-    "    # 只优化能量，不再联合优化磁化率\n",
-    "    for param in qnn_model.parameters():\n",
-    "        nn.init.uniform_(param, a=-np.pi, b=np.pi)\n",
-    "    for epoch in range(100):  # 迭代步数可调\n",
+    "   \n",
+    "    # 训练模型\n",
+    "    for epoch in range(500):  # 迭代步数可调\n",
     "        optimizer.zero_grad()\n",
     "        output = qnn_model()\n",
     "        loss = output.mean()  # 只优化能量\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
+    "\n",
     "    # 记录最优参数下的物理量\n",
     "    final_weights = qnn_model.weight.detach().numpy()\n",
     "    estimator = Estimator()\n",
+    "    # <H> 基态能量\n",
     "    E0 = estimator.run(circuits=ansatz_circuit, observables=hamiltonian, parameter_values=[final_weights]).result().values[0]\n",
+    "\n",
     "    # <Z> 总磁化\n",
     "    z_obs = SparsePauliOp.from_list([(f\"{'I'*i + 'Z' + 'I'*(n_qubits - i - 1)}\", 1.0) for i in range(n_qubits)])\n",
     "    mz = estimator.run(circuits=ansatz_circuit, observables=z_obs, parameter_values=[final_weights]).result().values[0] / n_qubits\n",
+    "\n",
     "    # <X> 总磁化\n",
     "    x_obs = SparsePauliOp.from_list([(f\"{'I'*i + 'X' + 'I'*(n_qubits - i - 1)}\", 1.0) for i in range(n_qubits)])\n",
     "    mx = estimator.run(circuits=ansatz_circuit, observables=x_obs, parameter_values=[final_weights]).result().values[0] / n_qubits\n",
     "    results.append((n_qubits, E0, mz, mx))\n",
+    "    \n",
     "    print(f\"N={n_qubits}, E0={E0:.6f}, <Z>={mz:.6f}, <X>={mx:.6f}\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -274,15 +211,15 @@
      "text": [
       "\n",
       "Summary for N=2 to 10:\n",
-      "N=2: E0=-2.236065, <Z>=0.002386, <X>=0.894435\n",
-      "N=3: E0=-3.492862, <Z>=0.044062, <X>=0.839051\n",
-      "N=4: E0=-4.706043, <Z>=0.190158, <X>=0.814430\n",
-      "N=5: E0=-5.607456, <Z>=0.652215, <X>=0.665282\n",
-      "N=6: E0=-6.847428, <Z>=0.535685, <X>=0.736193\n",
-      "N=7: E0=-7.541630, <Z>=0.409194, <X>=0.703174\n",
-      "N=8: E0=-8.843509, <Z>=-0.531355, <X>=0.679143\n",
-      "N=9: E0=-8.607341, <Z>=-0.213022, <X>=0.492764\n",
-      "N=10: E0=-9.188352, <Z>=-0.494774, <X>=0.392903\n"
+      "N=2: E0=-2.236068, <Z>=0.000281, <X>=0.894537\n",
+      "N=3: E0=-3.493832, <Z>=0.005369, <X>=0.842585\n",
+      "N=4: E0=-4.756895, <Z>=0.035552, <X>=0.811119\n",
+      "N=5: E0=-6.025982, <Z>=-0.000959, <X>=0.788909\n",
+      "N=6: E0=-7.292277, <Z>=0.000726, <X>=0.773863\n",
+      "N=7: E0=-8.560426, <Z>=-0.000095, <X>=0.761768\n",
+      "N=8: E0=-9.825080, <Z>=-0.000248, <X>=0.754983\n",
+      "N=9: E0=-11.088728, <Z>=-0.000720, <X>=0.749347\n",
+      "N=10: E0=-12.355604, <Z>=0.004181, <X>=0.744313\n"
      ]
     }
    ],
