--- a/Ising_QNN_mat.ipynb
+++ b/Ising_QNN_mat.ipynb
@@ -237,6 +237,34 @@
     "for n, E0, mz, mx in results:\n",
     "    print(f\"N={n}: E0={E0:.6f}, <Z>={mz:.6f}, <X>={mx:.6f}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualize the Physically Inspired Ansatz Circuit\n",
+    "\n",
+    "Below we plot the quantum circuit structure for the physically inspired ansatz used in this notebook (for N=4 as an example)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qiskit.visualization import circuit_drawer\n",
+    "\n",
+    "# Example: visualize the ansatz for N=4\n",
+    "n_qubits_example = 4\n",
+    "h_example = 1.0\n",
+    "J_example = 1.0\n",
+    "ansatz_circuit_example, _ = create_physically_inspired_ansatz(n_qubits_example, h_example, J_example, reps=4)\n",
+    "\n",
+    "# Draw the circuit\n",
+    "circuit_drawer(ansatz_circuit_example, output='mpl')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
