--- a/Ising_QNN.ipynb
+++ b/Ising_QNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,16 +77,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'optimizer = torch.optim.Adagrad(qnn_model.parameters(), lr=0.1)  # 可调整学习率'"
+       "'optimizer = torch.optim.Adagrad(qnn_model.parameters(), lr=0.1)  # Learning rate can be adjusted'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,16 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'optimizer = torch.optim.SGD(qnn_model.parameters(), lr=0.01)  # 可根据需要调整学习率'"
+       "'optimizer = torch.optim.SGD(qnn_model.parameters(), lr=0.01)  # Adjust learning rate as needed'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,22 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/d9/_3jh3gcd7m5gl50nsj1mgls80000gn/T/ipykernel_5982/267513214.py:9: DeprecationWarning: V1 Primitives are deprecated as of qiskit-machine-learning 0.8.0 and will be removed no sooner than 4 months after the release date. Use V2 primitives for continued compatibility and support.\n",
-      "  qnn = EstimatorQNN(\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/d9/_3jh3gcd7m5gl50nsj1mgls80000gn/T/ipykernel_5982/267513214.py:9: DeprecationWarning: V1 Primitives are deprecated as of qiskit-machine-learning 0.8.0 and will be removed no sooner than 4 months after the release date. Use V2 primitives for continued compatibility and support.\n",
+      "/var/folders/d9/_3jh3gcd7m5gl50nsj1mgls80000gn/T/ipykernel_68103/3820722690.py:9: DeprecationWarning: V1 Primitives are deprecated as of qiskit-machine-learning 0.8.0 and will be removed no sooner than 4 months after the release date. Use V2 primitives for continued compatibility and support.\n",
       "  qnn = EstimatorQNN(\n"
      ]
     },
@@ -142,30 +134,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N=2, E0=-2.236068, <Z>=0.000281, <X>=0.894537\n",
-      "N=3, E0=-3.493832, <Z>=0.005369, <X>=0.842585\n",
-      "N=3, E0=-3.493832, <Z>=0.005369, <X>=0.842585\n",
-      "N=4, E0=-4.756895, <Z>=0.035552, <X>=0.811119\n",
-      "N=4, E0=-4.756895, <Z>=0.035552, <X>=0.811119\n",
-      "N=5, E0=-6.025982, <Z>=-0.000959, <X>=0.788909\n",
-      "N=5, E0=-6.025982, <Z>=-0.000959, <X>=0.788909\n",
-      "N=6, E0=-7.292277, <Z>=0.000726, <X>=0.773863\n",
-      "N=6, E0=-7.292277, <Z>=0.000726, <X>=0.773863\n",
-      "N=7, E0=-8.560426, <Z>=-0.000095, <X>=0.761768\n",
-      "N=7, E0=-8.560426, <Z>=-0.000095, <X>=0.761768\n",
-      "N=8, E0=-9.825080, <Z>=-0.000248, <X>=0.754983\n",
-      "N=8, E0=-9.825080, <Z>=-0.000248, <X>=0.754983\n",
-      "N=9, E0=-11.088728, <Z>=-0.000720, <X>=0.749347\n",
-      "N=9, E0=-11.088728, <Z>=-0.000720, <X>=0.749347\n",
-      "N=10, E0=-12.355604, <Z>=0.004181, <X>=0.744313\n",
-      "N=10, E0=-12.355604, <Z>=0.004181, <X>=0.744313\n"
+      "N=10, E0=-12.358489, <Z>=-0.001475, <X>=0.742854\n"
      ]
     }
    ],
    "source": [
     "# Calculate ground state energy and magnetization for N=2 to 10\n",
     "results = []\n",
-    "for n_qubits in range(2, 11):\n",
+    "for n_qubits in range(10, 11):\n",
     "    J = 1.0\n",
     "    h = 1.0\n",
     "    hamiltonian = build_ising_hamiltonian(n_qubits, J, h)\n",
@@ -182,7 +158,7 @@
     "    optimizer = torch.optim.AdamW(qnn_model.parameters(), lr=0.01)\n",
     "   \n",
     "    # Train the model\n",
-    "    for epoch in range(500):  # Number of iterations can be adjusted\n",
+    "    for epoch in range(1000):  # Number of iterations can be adjusted\n",
     "        optimizer.zero_grad()\n",
     "        output = qnn_model()\n",
     "        loss = output.mean()  # Optimize only the energy\n",
@@ -210,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -219,15 +195,7 @@
      "text": [
       "\n",
       "Summary for N=2 to 10:\n",
-      "N=2: E0=-2.236068, <Z>=0.000281, <X>=0.894537\n",
-      "N=3: E0=-3.493832, <Z>=0.005369, <X>=0.842585\n",
-      "N=4: E0=-4.756895, <Z>=0.035552, <X>=0.811119\n",
-      "N=5: E0=-6.025982, <Z>=-0.000959, <X>=0.788909\n",
-      "N=6: E0=-7.292277, <Z>=0.000726, <X>=0.773863\n",
-      "N=7: E0=-8.560426, <Z>=-0.000095, <X>=0.761768\n",
-      "N=8: E0=-9.825080, <Z>=-0.000248, <X>=0.754983\n",
-      "N=9: E0=-11.088728, <Z>=-0.000720, <X>=0.749347\n",
-      "N=10: E0=-12.355604, <Z>=0.004181, <X>=0.744313\n"
+      "N=3: E0=-3.493958, <Z>=-0.000486, <X>=0.842473\n"
      ]
     }
    ],
